# MyInfo

./: .gitignore  docker-compose.yml
app/: .dockerignore  Dockerfile  manage.py  pyproject.toml
app/ElectronicSynopsis/: admin.py  asgi.py  db_helper.py  encryption.py  models.py  settings.py  urls.py  views.py  wsgi.py
app/ElectronicSynopsis/migrations/: 0001_initial.py  0002_section_item_data_and_more.py  0003_attachment.py  0004_customuser_avatar.py  0005_usericon.py  0006_usericon_electronics_user_id_f6a6e3_idx.py  0007_remove_usericon_electronics_user_id_f6a6e3_idx_and_more.py  0008_usersetting.py  0009_keys.py  0010_keys_response_key.py  0011_alter_keys_response_key.py  0012_remove_keys_private_key_remove_keys_public_key_and_more.py  0013_keys_hash.py
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/app-draw-bar/: app-draw-bar.css  app-draw-bar.jsx
frontend/src/components/authorization-form/: authorization-form.css  authorization-form.jsx
frontend/src/components/content/: content.css  content.jsx
frontend/src/components/header/: header.css  header.jsx
frontend/src/components/menu/: text-edit-menu.css  text-edit-menu.jsx  tooltip-menu-item.css  tooltip-menu-item.jsx  tooltip-menu-section.css  tooltip-menu-section.jsx
frontend/src/hooks/: http.hook.js
frontend/src/redux/: actions.js  reducer.js
frontend/src/services/: DataBaseService.js
frontend/src/utils/: encryption.js
proxy/: nginx.conf
proxy/configs/: site.conf
(+54 files in other folders)
