[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
python-dotenv = "1.0.1"
django = "5.1.5"
django-split-settings = "1.3.2"
django-debug-toolbar = "5.0.1"
django-extensions = "3.2.3"
#django-cors-headers = "4.4.0"
djangorestframework = "3.16.0"
requests = "2.32.3"
uwsgi = "2.0.26"
djoser = "2.3.1"
djangorestframework-simplejwt = "5.5.0"
django-cors-headers = "4.7.0"
django-filter = "25.1"
aiohttp = "3.9.5"
channels = "3.0.5"
colorama = "0.4.6"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
flake8-blind-except = "0.2.1"
flake8-broken-line = "0.6.0"
flake8-bugbear = "22.9.23"
flake8-builtins = "2.0.0"
flake8-class-attributes-order = "0.1.3"
flake8-cognitive-complexity = "0.1.0"
flake8-commas = "2.1.0"
flake8-comprehensions = "3.10.0"
flake8-debugger = "4.1.2"
flake8-eradicate = "1.4.0"
flake8-functions = "0.0.7"
flake8-isort = "5.0.0"
flake8-mutable = "1.2.0"
flake8-print = "5.0.0"
flake8-pytest = "1.4"
flake8-pytest-style = "1.6.0"
flake8-quotes = "3.3.1"
flake8-string-format = "0.3.0"
flake8-variables-names = "0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"